12Jul07=======================================================================
1. Change disconnection code so that nodes that are no longer routable are
(all) cleared out.
2. Add help for sh/band and also allow query of individual band or regions.
11Jul07=======================================================================
1. improve speed of sh/c/n
2. remove all $Id$ strings from cmd tree
09Jul07=======================================================================
1. remove check for PC93 from legacy nodes. This will allow PC10s to be
propagated correctly. Probably.
08Jul07=======================================================================
1. put in a temporary fix to the crashing on incoming PC10 talks, whilst I
try to work out how it is happening.
06Jul07=======================================================================
1. re-arrange id checking so that it is more logical and check that config
records, that can be an hour coming, are not thoughtlessly ignored, thus
causing nodes to time out.
2. Make sure that the 'over midnight' distance calculation actually does what
is required!
3. Tart up version number reporting in sh/node.
4. Pass the correct number of parameters in pc93 -> pc12 conversions which
should stop returning PC12s coming out as SYSOP announces.
05Jul07=======================================================================
1. Try to make sure that the node config broadcasts are actually sent...
03Jul07=======================================================================
1. fix unwanted dupe notifications if a PC12 comes back in on a loop.
02Jul07=======================================================================
1. Add a new command to show the contents of the cmd_cache. This allows those
people whom develop their own commands to see which version they are using.
It is called show/cmd_cache (or sh/cmd for short).
2. Add some extra info to the links command. Show whether a link is isolated